--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
 <body>
     <div class="header">
         <div class="header-content">
-	    <img src="images/spoga.png" alt="spoga">
             <img src="images/LOGO PNG.png" alt="GLOBAL BASE SOURCING LIMITED">
             
             <!-- Add more images as needed -->
@@ -155,8 +154,8 @@
                     <td>Width 17cm x Length 17cm x Height 15.3cm</td>
                 </tr>
                 <tr>
-                    <th>Product CBM</th>
-                    <td>0</td>
+                    <th>MOQ</th>
+                    <td>36200</td>
                 </tr>
                 <tr>
                     <th>Product Weight</th>
@@ -164,7 +163,7 @@
                 </tr>
                 <tr>
                     <th>Unit</th>
-                    <td>pcs</td>
+                    <td>Pcs</td>
                 </tr>
                 <tr>
                     <th>Carton Size</th>
@@ -179,20 +178,20 @@
                     <td>0.075</td>
                 </tr>
                 <tr>
-                    <th>20 Ft Container Carton Quantity</th>
-                    <td>372 Carton</td>
+                    <th>20 Ft Container Quantity</th>
+                    <td>14880</td>
                 </tr>
                 <tr>
-                    <th>40 Ft Container Carton Quantity</th>
-                    <td>798 Carton</td>
+                    <th>40 Ft Container Quantity</th>
+                    <td>31920Carton</td>
                 </tr>
                 <tr>
-                    <th>40 HQ Container Carton Quantity</th>
-                    <td>905 Carton</td>
+                    <th>40 HQ Container Quantity</th>
+                    <td>36200</td>
                 </tr>
                 <tr>
                     <th>Price</th>
-                    <td><button class="link-button" id="myBtn">Show Price</button></td>
+                    <td>USD 1.35</td>
                 </tr>
                 <tr>
                     <th>FOB Port</th>
@@ -200,7 +199,7 @@
                 </tr>
                 <tr>
                     <th>More Details - Packaging PPT</th>
-                    <td><button class="link-button" onclick="window.location.href='Link';"> </button></td>
+                    <td>Bulk Packed, Base Label</button></td>
                 </tr>
             </table>
         </div>
